fix: fix about internal links position for overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,6 @@
 	--box-shadow: 0 2px 6px rgb(var(--gray) / 25%), 0 8px 24px rgb(var(--gray) / 33%),
 		0 16px 32px rgb(var(--gray) / 33%);
     scroll-behavior: smooth;
-    width: 100vw;
     overflow-x: hidden;
 }
 @font-face {
